# krdict.py

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  PYPI_README.md  README.md  mkdocs.yml  requirements.txt  setup.cfg
.github/workflows/: test.yml
docs/: enums.md  examples.md  exceptions.md  extra.css  extra.js  functions.md  index.md  main.md  meaning_category.md  other.md  parameters.md  requirements.txt  return_types.md  scraper.md  semantic_category.md  subject_category.md  types.md
src/: examples.py  test.py  test_krdict.py  test_request.py  test_scraper.py
src/krdict/: __init__.py  __init__.pyi  _helpers.py  _params.py  _results.py  _scraper_utils.py  korean-go-kr-chain.pem  main.py  main.pyi  meaning_category.py  params.py  request.py  request.pyi  response.py  response.pyi  results.py  scraper.py  scraper.pyi  subject_category.py
src/krdict/scraper/: __init__.py  __init__.pyi  constants.py  extend.py  extend.pyi  fetch.py  fetch.pyi  main.py  main.pyi  request.py  response.py  utils.py
src/krdict/types/: __init__.py  base.py  base.pyi  enum.py  exceptions.py  main.py  meaning_category.py  scraper.py  subject_category.py
src/tests/: test_krdict.py  test_request.py  test_scraper.py
