[metadata]
name = krdict.py
version = 1.0.0
author = Omar M.
author_email = omarkmu@gmail.com
description = A module which helps with querying the KRDict API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omarkmu/krdict.py
project_urls =
    Bug Tracker = https://github.com/omarkmu/krdict.py/issues
    Documentation = https://krdictpy.readthedocs.io/en/latest
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = krdict
python_requires = >=3.8
