[metadata]
name = krdict.py
version = 1.1.1
author = Omar M.
author_email = omarkmu@gmail.com
description = A module that helps with querying the Korean Learner's Dictionary API.
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
keywords = korean dictionary api
url = https://github.com/omarkmu/krdict.py
project_urls =
    Source Code = https://github.com/omarkmu/krdict.py
    Bug Tracker = https://github.com/omarkmu/krdict.py/issues
    Documentation = https://krdictpy.readthedocs.io/en/v1.1.0
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = krdict
python_requires = >=3.8
