[metadata]
name = krdict.py
version = 3.0.1
author = Omar M.
author_email = omarkmu@gmail.com
description = A package that helps with querying the Korean Learners' Dictionary API.
long_description = file: PYPI_README.md
long_description_content_type = text/markdown
keywords = korean dictionary api
url = https://github.com/omarkmu/krdict.py#readme
project_urls =
    Source Code = https://github.com/omarkmu/krdict.py
    Bug Tracker = https://github.com/omarkmu/krdict.py/issues
    Documentation = https://krdictpy.readthedocs.io/en/v3.0.1
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages =
    krdict
    krdict.scraper
    krdict.types
    krdict.types.enums
python_requires = >=3.8
